# streamlit_project

./: .gitignore  README.md  app.py  customers.db  database.py  hello.py  hello_back.py  hello_bak.py  home.py  main.py  page_1.py  page_2.py  pyproject.toml  run_app.py  run_app.spec  sidebar_test.py  standard.db  streamlit_table_filter.py  streamlit_table_filter.spec  test.py  tree.py
.streamlit/: config.toml  pages.toml
audio/: audio.py  static_html.py  testpdf.py
database/: ccgz_level_dict.py  chart.py  customer.py  db.py  db_new.py  glossary.py  metric.py  page.py  reference_standards.py  sql.py  standard_category.py  standard_db.py  standard_index.py  standard_structure.py
file/: 00-全部标准索引库（体系相关）2025.3.25.xlsx  01-储层改造领域标准目录（含引用标准）--韩20224.1.31--根据专家意见整理后(1).xlsx  05-规范性引用文件2.xlsx  06-术语词库2024.9.27-术语分词.xlsx  11-图片（图-表-公式）索引.xlsx  13-104-材料技术指标汇总表2024.10.30.xlsx  13-104-材料技术指标汇总表2025.12.30.xlsx  最终目次页（17-18-19-20-24合）2024.3.13.xlsx  术语词库2024.9.27-术语分词.xlsx  标准全文--体系范围标准-正文数据源-2025.6.21.xlsx
hooks/: hook-rpds.py  hook-st_aggrid.py  hook-streamlit - 副本.py.bak  hook-streamlit_pdf.py
pages/: detail.py  load_data.py
static/: NB_T 10838-2021公式（A.1）  ccgz_level_dict.xlsx
utils/: data_utils.py  utils.py
view/: display_ccgz_query_list.py  display_chart_query_list.py  display_craft_standard.py  display_glossary_query_list.py  display_method_query_list.py  display_metric_query_list.py  display_navigator_tab.py  display_product_standard.py  display_standard_detail.py  display_standard_glossary.py  display_standard_query_list.py  display_standard_references.py  (+7 more)
(+4 files in other folders)
