[project]
name = "streamlit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
    "st-pages>=1.0.1",
    "streamlit[pdf]>=1.51.0",
    "streamlit-aggrid>=1.1.5.post1",
    "streamlit-extras>=0.7.5",
    "streamlit-tree-select>=0.0.5",
    "reportlab>=4.4.5",
]
